[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ThreadFactory"
version = "1.0.0"
description = "A high-performance thread-safe data structure and concurrency library for Python 3.13+ (no-GIL)."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Mark Geleta", email = "SynapticAISystems@gmail.com" }
]
keywords = [
    "concurrent",
    "parallel",
    "thread-safe",
    "no-GIL",
    "ThreadFactory",
    "threading",
    "threadfactory",
    "free-threading",
    "high-performance",
    "freethreading"
]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Networking",
    "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/Synaptic724/ThreadFactory"
Issues = "https://github.com/Synaptic724/ThreadFactory/issues"
